--- a/package.json
+++ b/package.json
@@ -1,22 +1,49 @@
 {
   "name": "ffxiv-achievements",
   "version": "0.0.1",
-  "main": "main.js",
+  "main": "./dist/src/main/main.js",
   "repository": "https://github.com/RicecakeFC/ffxiv-achievements.git",
   "author": "RiceCake404 <etenaelta@outlook.com>",
   "license": "MIT",
   "scripts": {
     "electron:copyfiles": "copyfiles ./src/render/index.html ./dist/src/render/ -f",
-    "electron:build": "tsc -p ./tsconfig.json && yarn electron:copyfiles",
-    "electron:start": "yarn electron:build && yarn electron ./dist/src/main/main.js"
+    "electron:build": "tsc -p ./tsconfig.json",
+    "electron:buildRender": "del-cli dist/* && cd src/render && yarn vue-cli-service build --mode electron",
+    "elecront:buildAll": "yarn electron:buildRender && yarn electron:build",
+    "electron:start": "yarn electron:build && yarn electron ./dist/src/main/main.js",
+    "electron:pack": "del-cli release/* && yarn electron:build && electron-builder -w",
+    "electron:unpacked": "del-cli release/* && yarn electron:build && electron-builder -w --dir"
+  },
+  "build": {
+    "appId": "ffxiv-achievements",
+    "artifactName": "FFXIV-Achievements.${ext}",
+    "productName": "FFXIV Achievements",
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist"
+    ],
+    "win": {
+      "requestedExecutionLevel": "highestAvailable",
+      "icon": "./assets/favicon.png",
+      "asar": true
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
     "copyfiles": "^2.4.1",
+    "del-cli": "^4.0.1",
     "electron": "^15.3.0",
+    "electron-builder": "^22.13.1",
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "electron-context-menu": "^3.1.1",
     "tslib": "^2.3.1"
   }
 }
