--- a/package.json
+++ b/package.json
@@ -36,10 +36,18 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "copyfiles": "^2.4.1",
     "del-cli": "^4.0.1",
     "electron": "^15.3.0",
     "electron-builder": "^22.13.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "prettier": "2.4.1",
     "typescript": "^4.4.4"
   },
   "dependencies": {
