--- a/src/render/package.json
+++ b/src/render/package.json
@@ -33,6 +33,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "typescript": "~4.1.5",
+    "unplugin-element-plus": "^0.1.3",
     "unplugin-vue-components": "^0.17.2",
     "vue-cli-plugin-i18n": "~2.3.1"
   },
