--- a/src/render/package.json
+++ b/src/render/package.json
@@ -9,6 +9,7 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
@@ -31,9 +32,12 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "sass": "1.32.12",
+    "sass-loader": "^10.1.0",
     "typescript": "~4.1.5",
     "unplugin-vue-components": "^0.17.2",
-    "vue-cli-plugin-i18n": "~2.3.1"
+    "vue-cli-plugin-i18n": "~2.3.1",
+    "vue-cli-plugin-quasar": "~4.0.4"
   },
   "eslintConfig": {
     "root": true,
