--- a/src/render/package.json
+++ b/src/render/package.json
@@ -37,7 +37,8 @@
     "typescript": "~4.1.5",
     "unplugin-vue-components": "^0.17.2",
     "vue-cli-plugin-i18n": "~2.3.1",
-    "vue-cli-plugin-quasar": "~4.0.4"
+    "vue-cli-plugin-quasar": "~4.0.4",
+    "vue-cli-plugin-webpack-bundle-analyzer": "~4.0.0"
   },
   "eslintConfig": {
     "root": true,
