--- a/src/render/package.json
+++ b/src/render/package.json
@@ -46,6 +46,10 @@
   },
   "eslintConfig": {
     "root": true,
+    "globals": {
+      "defineProps": "readonly",
+      "defineEmits": "readonly"
+    },
     "env": {
       "node": true
     },
