--- a/src/render/package.json
+++ b/src/render/package.json
@@ -17,7 +17,8 @@
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "webpack": "^4.36.0"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^3.0.0",
