--- a/src/render/package.json
+++ b/src/render/package.json
@@ -12,16 +12,20 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "quasar": "^2.3.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
+    "vuex-composition-helpers": "^2.0.0",
+    "vuex-persist": "^3.1.3",
     "webpack": "^4.36.0"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^3.0.0",
+    "@types/lodash": "^4.14.176",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
