--- a/src/render/package.json
+++ b/src/render/package.json
@@ -5,10 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint",
-    "lint:fix": "vue-cli-service lint --fix",
     "build:electron": "vue-cli-service build --mode electron",
-    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\"",
+    "lint:fix": "vue-cli-service lint --fix",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
@@ -25,6 +30,7 @@
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^3.0.0",
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/lodash": "^4.14.176",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -38,6 +44,8 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
+    "electron": "^13.0.0",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
@@ -47,6 +55,7 @@
     "sass-loader": "^10.1.0",
     "typescript": "~4.1.5",
     "unplugin-vue-components": "^0.17.2",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-cli-plugin-i18n": "~2.3.1",
     "vue-cli-plugin-quasar": "~4.0.4",
     "vue-cli-plugin-webpack-bundle-analyzer": "~4.0.0"
